--- a/LattesExtractor/App.config
+++ b/LattesExtractor/App.config
@@ -9,7 +9,12 @@
     <!-- <add key="UseNewCNPqRestService" value="true" /> -->
 
     <!-- Descomentar a linha abaixo para informar um CSV como lista de curriculos para importação -->
-    <!-- <add key="CSVCurriculumValueNumberList" value="./resources/csv_list_sample.csv" /> -->
+    <!--
+      Utilizado para criar um arquivo csv com o seguinte formato (sem o num do curriculo:
+      NumeroCurriculo;NomeProfessor;DataNascimento;CPF;
+      ;FULANO DA SILVA;23/11/1992;00000000000
+    -->
+    <add key="CSVCurriculumValueNumberList" value="./resources/csv_list_sample.csv" />
 
     <!-- Descomentar a linha abaixo caso deseje fazer a importação de uma pasta no lugar de baixar do Webservice do CNPq -->
     <!-- <add key="ImportFolder" value="resources/sample" /> -->
@@ -17,8 +22,11 @@
     <add key="TempDir" value="./.temp/cnpq"/>
     <add key="IgnorePedingLastExecution" value="false"/>
     <add key="LattesCurriculumVitaeODBCConnection" value="Provider=Microsoft.Jet.OLEDB.4.0; Data Source=.\resources\IDs_Curriculos.local.xls; Extended Properties='Excel 8.0;HDR=YES;'"/>
-    <!-- Numero do Curriculo, Nome do Professor, Data Nascimento e CPF -->
-    <add key="LattesCurriculumVitaeQuery" value="SELECT [numerocurriculo], [nomecompleto] FROM [ids_lattes$]"/>
+    <!-- Numero do Curriculo, Nome do Professor, Data Nascimento e CPF 
+      Utilizado para consulta sem num de curriculo (apenas com CPF)
+    -->
+    <add key="LattesCurriculumVitaeQuery" value="SELECT [nomeprofessor], [datanascimento], [cpf] FROM [ProfessoresLattes$]"/>
+    <!-- <add key="LattesCurriculumVitaeQuery" value="SELECT [numerocurriculo], [nomecompleto] FROM [ids_lattes$]"/> -->
     <add key="ClientSettingsProvider.ServiceUri" value=""/>
   </appSettings>
   <startup>
